# UnifyWeaver

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  AGENT_INSTRUCTIONS.md  BBOLT_INTEGRATION_DESIGN.md  CHANGELOG.md  CLAUDE.md  CLAUDE_REVIEW.md  FIXES_NEEDED.md  FUTURE_WORK.md  GO_JSON_COMPARISON.md  GO_JSON_FEATURES.md  NESTED_FIELDS_DESIGN.md  NEXT_CHAT_CONTEXT.md  PHASE_8A_PROGRESS.md  PHASE_8B_COMPLETED.md  PHASE_9D_COMPLETED.md  PHASE_9E_COMPLETED.md  PHASE_9F_COMPLETED.md  PHASE_WAM_GO_COMPLETED.md  POWERSHELL_APPROACH_DECISION.md  POWERSHELL_SEMANTIC_PROPOSAL.md  PR_AGENT_LOOP_COMPOSABLE_GEN.md  PR_AGENT_LOOP_FRAGMENT_STREAM_BINDINGS.md  PR_AGENT_LOOP_RUST_PHASE10.md  PR_AGENT_LOOP_RUST_PHASE11.md  PR_AGENT_LOOP_RUST_PHASE20.md  PR_BBOLT_READ.md  PR_COMPILE_FACTS_GO_RUST.md  PR_COST_BASED_OPTIMIZATION.md  PR_CROSS_JOIN.md  PR_DESCRIPTION.md  PR_DESCRIPTION_PYTHON.md  PR_DESCRIPTION_PYTHON_ARITY3.md  PR_DESCRIPTION_PYTHON_ENHANCEMENTS.md  PR_DESCRIPTION_PYTHON_GENERATOR.md  PR_DESCRIPTION_PYTHON_MUTUAL.md  PR_DESCRIPTION_PYTHON_RECURSION.md  PR_DESCRIPTION_WAM_C_LOWERED_HELPER_PROTOTYPE.md  (+400 more)
.claude/: settings.local.json
benchmarks/: go_wam_runtime_findings.md  wam_cpp_indexing.md  wam_effective_distance_cross_target.md  wam_elixir_builtin_coverage.md  wam_elixir_graph_kernels.md  wam_elixir_tier2_findall.md  wam_go_vs_rust_prolog.md  wam_scala_mode_bench.md
config/: model_defaults.yaml  model_registry.yaml.example  model_registry_defaults.yaml
context/: broken_pipe_analysis_and_solution.md  broken_pipe_implementation_plan.md  test_active_termination_approach.sh  test_broken_pipe_solutions.sh  test_eof_signaling_approach.sh
docker/: .docker-functions.sh  .dockerignore  CludeNotes.md  DOCKER-QUICKSTART.md  DOCKER.md  Dockerfile  Dockerfile.pwsh  Dockerfile.wine  PERSISTENCE.md  README.md  compose.mounts.override.yml  docker-compose.persistent.yml  docker-compose.yml  docker-dev.sh  docker-mount-projects.sh  docker-pwsh.sh  docker-wine.sh
docs/: ADVANCED_RECURSION.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  AWK_MATCH_PREDICATE.md  AWK_TARGET_EXAMPLES.md  AWK_TARGET_FUTURE_WORK.md  AWK_TARGET_STATUS.md  BINDING_MATRIX.md  CLIENT_SERVER_DESIGN.md  CLUSTER_COUNT_THEORY.md  CONSTRAINT_SYSTEM.md  CONTROL_PLANE.md  CSHARP_DOTNET_RUN_HANG_SOLUTION.md  DATA_SOURCES_IMPLEMENTATION_PLAN.md  DOTNET_COMPILATION.md  ELIXIR_TARGET.md  ENHANCED_PIPELINE_CHAINING.md  EXTENDED_README.md  FUTURE_WORK.md  (+92 more)
examples/benchmark/cache_warming_microbench/: .gitignore  cache-warming-microbench.cabal
examples/benchmark/cache_warming_microbench/src/: Crossover.hs  Main.hs  Patterns.hs  Rankers.hs
examples/benchmark/enwiki_dfs_benchmark/: .ghc.environment.x86_64-linux-8.6.5  README.md  enwiki-dfs-benchmark.cabal
examples/benchmark/enwiki_dfs_benchmark/src/: Common.hs  IntMapBackend.hs  LmdbBackend.hs  LmdbCachedBackend.hs  Main.hs
examples/pearltrees/: Cargo.toml  README.md  demo_bookmark_filing.cs  demo_bookmark_filing.rs  embedding.rs  export_physics_seeds.cs  llm.rs  main.rs  projection.rs  rust_ingest.rs  searcher.rs  test_projection_integration.rs
src/unifyweaver/runtime/rust/mysql_stream/: Cargo.toml  README.md
src/unifyweaver/runtime/rust/mysql_stream/src/: categorylinks_resolve.rs  lib.rs  lmdb_sink.rs  main.rs
(+4218 files in other folders)
