[package]
name = "pearltrees_examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_ingest"
path = "rust_ingest.rs"

[[bin]]
name = "demo_bookmark_filing"
path = "demo_bookmark_filing.rs"

[[bin]]
name = "test_rust_search"
path = "../../test_rust_search.rs"

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
redb = "2.0"
quick-xml = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[lib]
path = "../../src/unifyweaver/targets/rust_runtime/importer.rs"
name = "importer"

# Include the rust_runtime modules
[build]
target-dir = "../../target"
