cabal-version: 2.4
name:          cache-warming-microbench
version:       0.1.0.0
synopsis:      Phase M measurement spike — read patterns, ranker overhead, warming-vs-JIT crossover
license:       MIT
build-type:    Simple

executable cache-warming-microbench
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    Patterns, Rankers, Crossover
  build-depends:    base >= 4.12,
                    containers >= 0.6,
                    bytestring,
                    time >= 1.8,
                    deepseq >= 1.4,
                    mtl,
                    lmdb >= 0.2.5,
                    random >= 1.2
  default-language: Haskell2010
  ghc-options:      -O2 -rtsopts -threaded
