cabal-version: 2.4
name:          enwiki-dfs-benchmark
version:       0.1.0.0
synopsis:      IntMap vs LMDB DFS benchmark at enwiki scale
license:       MIT
build-type:    Simple

executable enwiki-dfs
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    Common, IntMapBackend, LmdbBackend, LmdbCachedBackend
  build-depends:    base >= 4.12,
                    containers >= 0.6,
                    bytestring,
                    time >= 1.8,
                    deepseq >= 1.4,
                    parallel >= 3.2,
                    mtl,
                    lmdb >= 0.2.5,
                    random >= 1.2
  default-language: Haskell2010
  ghc-options:      -O2 -rtsopts -threaded
